# Initiates
AC_INIT([hello], [1.0])

# Check if file exists
AC_CONFIG_SRCDIR([hello.cpp])

# Puts aux files in that folder
AC_CONFIG_AUX_DIR([./trash])

# Make config header
AC_CONFIG_HEADERS([config.h])

# Initiates automake
AM_INIT_AUTOMAKE([1.11 -Wall -Werror])

AC_CONFIG_FILES([Makefile])

# Find C++ Compiler
AC_PROG_CXX

# Output
AC_OUTPUT
